--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,8 @@ gradle-app.setting
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+
+!/gradle/wrapper/gradle-wrapper.jar
+
+**/runs/**
+**/run/**
