--- a/gradle.properties
+++ b/gradle.properties
@@ -16,12 +16,10 @@ parchmentMinecraftVersion=1.19.2
 jetbrainsAnnotationsVersion=23.0.0
 fabricLoaderVersion=0.14.9
 fabricVersion=0.59.0
-forgeVersion= 43.0.7
+forgeVersion=43.0.11-fix-unique-mod-list-builder-no-mods
 mixinAnnotationProcessorVersion=0.8.4
-scenaVersion=1.0.3
-supportedScenaVersionRange=[1.0.3,2.0.0)
+scenaVersion=1.0.22
 saeculariaCaudicesVersion=1.0.6
-supportedSaeculariaCaudicesVersionRange=[1.0.6,2.0.0)
 
 # Metadata
 author=OrionDevelopment
