--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id ("org.parchmentmc.librarian.forgegradle")
 }
 
+project.sourceSets.main.resources.srcDir "src/datagen/generated"
+
 project.dependencies.minecraft "net.minecraft:joined:${project.minecraftVersion}"
 project.dependencies.implementation fg.deobf("com.communi-suggestu.scena:scena-core:${project.scenaVersion}")
 project.dependencies.implementation fg.deobf("com.communi-suggestu.saecularia-caudices:saecularia-caudices-core:${project.saeculariaCaudicesVersion}")
