--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,13 @@
 ### Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+org.gradle.debug=false
 
 ### Toolchain setup
 javaVersion=17
 
 ### Versioning
-localVersion=1.0.0
+localVersion=1.0.1
 owner=Communi-Suggestu
 
 ### Dependency versioning
@@ -16,16 +17,16 @@ parchmentMinecraftVersion=1.19.2
 jetbrainsAnnotationsVersion=23.0.0
 fabricLoaderVersion=0.14.9
 fabricVersion=0.59.0
-forgeVersion=43.0.11-fix-unique-mod-list-builder-no-mods
+forgeVersion=43.1.25
 mixinAnnotationProcessorVersion=0.8.4
-scenaVersion=1.0.22
+scenaVersion=1.0.42
 saeculariaCaudicesVersion=1.0.6
 
 # Metadata
-author=OrionDevelopment
+author=Communi-Suggestu
 
 # Maven data
-githubUrl=https://github.com/Communi-Suggestu/Scena
-gitUrl=https://github.com/Communi-Suggestu/Scena.git
-gitConnectUrl=https://github.com/Communi-Suggestu/Scena.git
-projectUrl=https://github.com/Communi-Suggestu/Scena
+githubUrl=https://github.com/Communi-Suggestu/Formula
+gitUrl=https://github.com/Communi-Suggestu/Formula.git
+gitConnectUrl=https://github.com/Communi-Suggestu/Formula.git
+projectUrl=https://github.com/Communi-Suggestu/Formula
