--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ javaVersion=17
 ### Versioning
 localVersion=1.0.1
 owner=Communi-Suggestu
+modId=Formula
 
 ### Dependency versioning
 minecraftVersion=1.19.2
